# aurora

./: .gitignore  .version  AUTHORS  COPYING  ChangeLog  Makefile.am  README  TODO  VERSION  configure.ac
build-aux/: version.sh
include/: Makefile.am  ash.h  aurora.h  cli.h  crawl.h  libcrawler.h  libwc.h  list.h  log.h  magic.h  mirage.h  time.h
src/: Makefile.am  ash.c  cli.c  crawling.db  init_crawling.db  list.c  magic.c  main.c  time.c
src/libcrawler/: Makefile.am  libcrawler.l
src/libwc/: Makefile.am  libwc.l
